--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tic-Tac-Toe</title>
+    <link rel = "stylesheet" href = "styles.css">
+    <link rel = "icon" type = "jpg" href = "../img/tictactoe_icon.jpg">
 </head>
 <body>
-    
+    <div id = "gameContainer">
+        <h1>TIC TAC TOE</h1>
+        <div id = "boardContainer">
+            <div tileIndex = "0" class = "tile"></div>
+            <div tileIndex = "1" class = "tile"></div>
+            <div tileIndex = "2" class = "tile"></div>
+            <div tileIndex = "3" class = "tile"></div>
+            <div tileIndex = "4" class = "tile"></div>
+            <div tileIndex = "5" class = "tile"></div>
+            <div tileIndex = "6" class = "tile"></div>
+            <div tileIndex = "7" class = "tile"></div>
+            <div tileIndex = "8" class = "tile"></div>
+        </div>
+        <h2 id = "statusText"></h2>
+        <button id = "resetButton">RESET</button>
+    </div>
+
+
+
+
+
+
+    <script src = "index.js"></script>
 </body>
 </html>
