added computer/multi div and changed layout

--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,11 @@
         <button id = "resetButton">RESET</button>
     </div>
 
-
-
-
-
+    <div id = "modeChoice">
+        <h2 id = "modeText">Pick a mode</h2>
+        <button id = "multiplayerButton">MULTIPLAYER</button>
+        <button id = "computerButton">COMPUTER</button>
+    </div>
 
     <script src = "index.js"></script>
 </body>
