--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,18 @@
     <div id = "gameContainer">
         <h1>TIC TAC TOE</h1>
         <div id = "boardContainer">
-            <div tileIndex = "0" class = "tile"></div>
-            <div tileIndex = "1" class = "tile"></div>
-            <div tileIndex = "2" class = "tile"></div>
-            <div tileIndex = "3" class = "tile"></div>
-            <div tileIndex = "4" class = "tile"></div>
-            <div tileIndex = "5" class = "tile"></div>
-            <div tileIndex = "6" class = "tile"></div>
-            <div tileIndex = "7" class = "tile"></div>
-            <div tileIndex = "8" class = "tile"></div>
+            <button tileIndex = "0" class = "tile" disabled></button>
+            <button tileIndex = "1" class = "tile" disabled></button>
+            <button tileIndex = "2" class = "tile" disabled></button>
+            <button tileIndex = "3" class = "tile" disabled></button>
+            <button tileIndex = "4" class = "tile" disabled></button>
+            <button tileIndex = "5" class = "tile" disabled></button>
+            <button tileIndex = "6" class = "tile" disabled></button>
+            <button tileIndex = "7" class = "tile" disabled></button>
+            <button tileIndex = "8" class = "tile" disabled></button>
         </div>
         <h2 id = "statusText"></h2>
-        <button id = "resetButton">RESET</button>
+        <button id = "resetButton" disabled>RESET</button>
     </div>
 
     <div id = "modeChoice">
