most comp algs done, need to debug more

--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,15 @@
     <div id = "gameContainer">
         <h1>TIC TAC TOE</h1>
         <div id = "boardContainer">
-            <button tileIndex = "0" class = "tile" disabled></button>
-            <button tileIndex = "1" class = "tile" disabled></button>
-            <button tileIndex = "2" class = "tile" disabled></button>
-            <button tileIndex = "3" class = "tile" disabled></button>
-            <button tileIndex = "4" class = "tile" disabled></button>
-            <button tileIndex = "5" class = "tile" disabled></button>
-            <button tileIndex = "6" class = "tile" disabled></button>
-            <button tileIndex = "7" class = "tile" disabled></button>
-            <button tileIndex = "8" class = "tile" disabled></button>
+            <button tileIndex = "0" class = "tile" id = "t0" disabled></button>
+            <button tileIndex = "1" class = "tile" id = "t1" disabled></button>
+            <button tileIndex = "2" class = "tile" id = "t2" disabled></button>
+            <button tileIndex = "3" class = "tile" id = "t3" disabled></button>
+            <button tileIndex = "4" class = "tile" id = "t4" disabled></button>
+            <button tileIndex = "5" class = "tile" id = "t5" disabled></button>
+            <button tileIndex = "6" class = "tile" id = "t6" disabled></button>
+            <button tileIndex = "7" class = "tile" id = "t7" disabled></button>
+            <button tileIndex = "8" class = "tile" id = "t8" disabled></button>
         </div>
         <h2 id = "statusText"></h2>
         <button id = "resetButton" disabled>RESET</button>
