--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TicTacToe</title>
     <link rel = "stylesheet" href = "styles.css">
-    <link rel = "icon" type = "jpg" href = "../img/tictactoe_icon.jpg">
+    <link rel = "icon" type = "jpg" href = "tictactoe_icon.jpg">
 </head>
 <body>
     <div id = "gameContainer">
